--- a/index.html
+++ b/index.html
@@ -14,24 +14,24 @@
 
     <h3>Song 1 💃</h3>
     <audio controls>
-      <source src="/Day2/audio/song1.mp3" type="audio/mpeg" />
+      <source src="./song1.mp3" type="audio/mpeg" />
     </audio>
 
     <h3>Song 2 💃</h3>
     <audio controls>
-      <source src="/Day2/audio/song2.mp3" type="audio/mpeg" />
+      <source src="./song2.mp3" type="audio/mpeg" />
     </audio>
 
     <h3>Song 3 💃</h3>
     <audio controls>
-      <source src="/Day2/audio/song3.mp3" type="audio/mpeg" />
+      <source src="./song3.mp3" type="audio/mpeg" />
     </audio>
 
     <h2>My favourite words of Premanand <del>Maharaj</del> ji</h2>
 
     <h3><ins>Video 1</ins> ☮️</h3>
     <img
-      src="/Day2/images/image1.jpeg"
+      src="./image1.jpeg"
       height="350"
       width="250"
       alt="ख़ामोश पल, गहरी भावनाएँ।"
@@ -40,14 +40,14 @@
       height="350"
       width="550"
       controls
-      poster="/Day2/thumbnail/thumbnail1.jpeg"
+      poster="./thumbnail1.jpeg"
     >
-      <source src="/Day2/videos/video1.mp4" type="video/mp4" />
+      <source src="./video1.mp4" type="video/mp4" />
     </video>
 
     <h3><u>Video 2</u> 🕊️</h3>
     <img
-      src="/Day2/images/image2.jpeg"
+      src="./image2.jpeg"
       height="350"
       width="250"
       alt="बहने दो।"
@@ -56,14 +56,14 @@
       height="350"
       width="550"
       controls
-      poster="/Day2/thumbnail/thumbnail2.jpeg"
+      poster="./thumbnail2.jpeg"
     >
-      <source src="/Day2/videos/video2.mp4" type="video/mp4" />
+      <source src="./video2.mp4" type="video/mp4" />
     </video>
 
     <h3><ins>Video 3</ins> 🔙</h3>
     <img
-      src="/Day2/images/image3.jpeg"
+      src="./image3.jpeg"
       height="350"
       width="250"
       alt="नर्म दिन, मज़बूत मन।"
@@ -72,14 +72,14 @@
       height="350"
       width="550"
       controls
-      poster="/Day2/thumbnail/thumbnail3.jpeg"
+      poster="./thumbnail3.jpeg"
     >
-      <source src="/Day2/videos/video3.mp4" type="video/mp4" />
+      <source src="./video3.mp4" type="video/mp4" />
     </video>
 
     <h3><u>Video 4</u> 🕉️</h3>
     <img
-      src="/Day2/images/image4.jpeg"
+      src="./image4.jpeg"
       height="350"
       width="250"
       alt="ख़ामोशी भी कुछ कहती है।"
@@ -88,9 +88,10 @@
       height="350"
       width="550"
       controls
-      poster="/Day2/thumbnail/thumbnail4.jpeg"
+      poster="./thumbnail4.jpeg"
     >
-      <source src="/Day2/videos/video4.mp4" type="video/mp4" />
+      <source src="./video4.mp4" type="video/mp4" />
     </video>
   </body>
 </html>
+
